<resources>
    <string name="app_name">Where\'sThePartyAt?!</string>
    <string name="title_activity_maps">Map</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="share_party">Share Party</string>
    <string name="party_name">Party Name</string>
    <string name="description">Description</string>
    <string name="byob">BYOB?</string>
    <string name="bar">Bar?</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="where_s_the_party_at">Where\'s The Party At?!</string>
    <string name="about_app">This app was made by Teague Harvey</string>
    <string name="action_help">Use touch controls to interact with the app!</string>
    <string name="hide">Hide</string>
    <string name="logout">Logout</string>
    <string name="my_parties">My Parties</string>
    <string name="party_name2">Party Name</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="success">Success</string>
    <string name="named_error">A party needs a name</string>
    <string name="description_error">A party needs a description</string>
    <string name="location_error">A party needs a location</string>
    <string name="error_occurred">An error occurred:</string>
    <string name="parties">parties</string>
    <string name="location_needed">This app needs your location</string>
    <string name="hello">Hello</string>
    <string name="permission_granted">Permission granted</string>
    <string name="email_error">The email can not be empty</string>
    <string name="password_error">The password can not be empty</string>
    <string name="loading">Loading...</string>
    <string name="registration_success">Registration successful!</string>
    <string name="error">Error:</string>
    <string name="bar_available">Bar available!</string>
    <string name="byob_please">BYOB please!</string>
</resources>
