<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="@string/share_party"
        android:orderInCategory="100"
        android:id="@+id/action_add"
        android:icon="@android:drawable/ic_menu_add"/>
    <item
        android:title="@string/about"
        android:orderInCategory="101"
        android:id="@+id/action_about"
        android:icon="@android:drawable/ic_menu_info_details"/>
    <item
        android:title="@string/help"
        android:orderInCategory="102"
        android:id="@+id/action_help"
        android:icon="@android:drawable/ic_menu_help"/>
    <item
        android:title="@string/logout"
        android:orderInCategory="103"
        android:id="@+id/action_logout"
        android:icon="@android:drawable/ic_menu_send"/>

</menu>